--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "homepage": "https://startbootstrap.com/template-overviews/freelancer",
   "bugs": {
     "url": "https://github.com/BlackrockDigital/startbootstrap-freelancer/issues",
-    "email": "feedback@startbootstrap.com"
+    "email": "email"
   },
   "license": "MIT",
   "author": "Start Bootstrap",
