--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "bootstrap": "^4.0.0-beta",
     "font-awesome": "4.7.0",
+    "gulp-nunjucks": "^3.0.0",
     "jquery": "^3.2.1",
     "jquery.easing": "^1.4.1",
     "popper.js": "^1.11.1"
