--- a/package.json
+++ b/package.json
@@ -4,21 +4,22 @@
   "version": "4.0.0-beta",
   "description": "Taleb Benouaer website",
   "dependencies": {
-    "bootstrap": "^4.0.0-beta",
-    "font-awesome": "4.7.0",
-    "gulp-nunjucks": "^3.0.0",
-    "jquery": "^3.2.1",
+    "@fortawesome/fontawesome-free": "5.7.2",
+    "bootstrap": "^4.3.1",
+    "gulp-cli": "^2.2.0",
+    "gulp-nunjucks": "^5.0.0",
+    "jquery": "^3.4.1",
     "jquery.easing": "^1.4.1",
-    "popper.js": "^1.11.1"
+    "popper.js": "^1.15.0"
   },
   "devDependencies": {
-    "browser-sync": "2.18.13",
-    "gulp": "^3.9.1",
-    "gulp-clean-css": "3.7.0",
-    "gulp-filter": "^5.0.1",
-    "gulp-header": "1.8.9",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^3.1.0",
-    "gulp-uglify": "3.0.0"
+    "browser-sync": "^2.26.7",
+    "gulp": "^4.0.2",
+    "gulp-clean-css": "^4.2.0",
+    "gulp-filter": "^6.0.0",
+    "gulp-header": "^2.0.7",
+    "gulp-rename": "^1.4.0",
+    "gulp-sass": "^4.0.2",
+    "gulp-uglify": "^3.0.2"
   }
 }
